scaffold/typescript-go-main/testdata/baselines/reference/fourslash/syntaxandSemanticDiagnostics/getJavaScriptSyntacticDiagnostics10.baseline
// === Syntax and Semantic Diagnostics ===
/a.js(1,12): error TS8004: Type parameter declarations can only be used in TypeScript files.


==== /a.js (1 errors) ====
    function F<T>() { }
               ~
!!! error TS8004: Type parameter declarations can only be used in TypeScript files.